@@ -1,3 +1,7 @@
+2010-04-29  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug: String data to be persisted in the database is escaped twice
+
 2010-04-28  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Confirmation mail on editing the profile is triggered also if not required
